err/k2-compose.err
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/cached_property-1.3.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/colorclass'...
Listing './lib/python3.5/site-packages/colorclass-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/compose'...
Listing './lib/python3.5/site-packages/compose/cli'...
Listing './lib/python3.5/site-packages/compose/config'...
Listing './lib/python3.5/site-packages/docker'...
Listing './lib/python3.5/site-packages/docker/api'...
Listing './lib/python3.5/site-packages/docker/models'...
Listing './lib/python3.5/site-packages/docker/transport'...
Listing './lib/python3.5/site-packages/docker/types'...
Listing './lib/python3.5/site-packages/docker/utils'...
Listing './lib/python3.5/site-packages/docker-2.7.0.dist-info'...
Listing './lib/python3.5/site-packages/docker_compose-1.18.0.dist-info'...
Listing './lib/python3.5/site-packages/docker_pycreds-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/dockerpty'...
Listing './lib/python3.5/site-packages/dockerpty-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/dockerpycreds'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/k2_compose'...
Listing './lib/python3.5/site-packages/k2_compose/agent'...
Compiling './lib/python3.5/site-packages/k2_compose/agent/opentsdb.py'...
***   File "./lib/python3.5/site-packages/k2_compose/agent/opentsdb.py", line 18
    print 'error: ',line
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/k2_compose/common'...
Listing './lib/python3.5/site-packages/k2_compose/compose_file'...
Compiling './lib/python3.5/site-packages/k2_compose/compose_file/compose_file.py'...
***   File "./lib/python3.5/site-packages/k2_compose/compose_file/compose_file.py", line 212
    print table_instance.table
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/k2_compose/container'...
Compiling './lib/python3.5/site-packages/k2_compose/container/container.py'...
***   File "./lib/python3.5/site-packages/k2_compose/container/container.py", line 341
    print 'Starting [%s] ...' % (self.id)
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/k2_compose/host'...
Listing './lib/python3.5/site-packages/k2_compose/image'...
Compiling './lib/python3.5/site-packages/k2_compose/image/image_history.py'...
***   File "./lib/python3.5/site-packages/k2_compose/image/image_history.py", line 44
    print '%s record(s) found for image %s:%s' % (len(self.content), self.image, self.tag)
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/k2_compose/k2cutils'...
Compiling './lib/python3.5/site-packages/k2_compose/k2cutils/confirm_input.py'...
***   File "./lib/python3.5/site-packages/k2_compose/k2cutils/confirm_input.py", line 5
    print '%s' % (msg), 'Are you sure? [yN]',
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/k2_compose/k2cutils/misc.py'...
***   File "./lib/python3.5/site-packages/k2_compose/k2cutils/misc.py", line 15
    print timestamp_to_utc_isoformat(ts)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/k2_compose/k2unittest.py'...
***   File "./lib/python3.5/site-packages/k2_compose/k2unittest.py", line 9
    print 'test k2compose ps ok.'
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/k2_compose/run.py'...
***   File "./lib/python3.5/site-packages/k2_compose/run.py", line 108
    print json.dumps(deployment, indent=2)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/k2_compose/service'...
Compiling './lib/python3.5/site-packages/k2_compose/service/service.py'...
***   File "./lib/python3.5/site-packages/k2_compose/service/service.py", line 71
    print table_instance.table
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/k2_compose-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pick'...
Listing './lib/python3.5/site-packages/pick-0.6.3.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/terminaltables'...
Listing './lib/python3.5/site-packages/terminaltables-3.1.0.egg-info'...
Listing './lib/python3.5/site-packages/texttable-0.9.1.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
